Bug 44293 - [4.6 regression] FAIL: gcc.c-torture/compile/20040304-1.c
Summary: [4.6 regression] FAIL: gcc.c-torture/compile/20040304-1.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-27 13:51 UTC by H.J. Lu
Modified: 2010-05-28 18:46 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-05-27 15:37:13


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-05-27 13:51:23 UTC
On Linux/x86, revision 159912 gave

FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer  (internal compiler error)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer  (test for excess errors)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  (internal compiler error)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  (test for excess errors)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer -funroll-loops  (internal compiler error)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -fomit-frame-pointer -funroll-loops  (test for excess errors)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -g  (internal compiler error)
FAIL: gcc.c-torture/compile/20040304-1.c  -O3 -g  (test for excess errors)

Revision 159873 is OK.
Comment 1 H.J. Lu 2010-05-27 13:53:52 UTC
Revision 159899 is bad.
Comment 2 H.J. Lu 2010-05-27 15:37:13 UTC
It is caused by revision 159887:

http://gcc.gnu.org/ml/gcc-cvs/2010-05/msg00943.html
Comment 3 Sebastian Pop 2010-05-28 18:38:21 UTC
Subject: Bug 44293

Author: spop
Date: Fri May 28 18:38:06 2010
New Revision: 159990

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=159990
Log:
Check the if-convertibility of phi nodes in non predicated BBs.

2010-05-28  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/44293
	* tree-if-conv.c (if_convertible_loop_p): Check the
	if-convertibility of phi nodes in non predicated BBs.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-if-conv.c

Comment 4 Sebastian Pop 2010-05-28 18:46:32 UTC
Fixed.