Check the if-convertibility of phi nodes in non predicated BBs.

2010-05-28  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/44293
	* tree-if-conv.c (if_convertible_loop_p): Check the
	if-convertibility of phi nodes in non predicated BBs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@159990 138bc75d-0d04-0410-961f-82ee72b054a4